--- a/Translation/Clean Intro.txt
+++ b/Translation/Clean Intro.txt
@@ -1,12 +1,12 @@
 ﻿// Intro 
 
-都内のＩＴ企業で開発エンジニアとして働くあなたは、=You work as a development engineer at an IT company in Tokyo.
+都内のＩＴ企業で開発エンジニアとして働くあなたは、=You worked as a development engineer at an IT company in Tokyo.
 今日も閑散とした駅のホームで終電を待っていた。=Today was an ordinary day. You were waiting for the last train at the station when...
 「過労自殺数、過去最多。変わらぬ労働環境」="Number of deaths due to overwork skyrocket, the highest number ever! It's not uncommon due to the working conditions."
 おじさん、今すぐしんじゃいそうな顔してるね。=Oji-san, your face looks like you're about to die.
 ……大丈夫？=...Are you alright?
 
-		#if "……a student"
+		#if "……A student"
 
 えっ、私？　……そうだけど。=Eh, Me?\n...I am but
 こんな時間に出歩くなって……人の心配してる場合？=Why am I walking this late outside?...\nAre you worried about me?
@@ -40,10 +40,10 @@
 エッチなことも、避妊さえすれば、何をしてもいいよ。=\nEven ecchi things, as long as you use a condom, you can do anything.
 ……だめ、かな？=...So, can I?
 
-		#If "Accept her Offer"
+		#If "Accept her offer"
 ……良かったぁ。断られたらどうしようかと思ったよ。=...Thank goodness.\nI'm not sure what I'd do if you refused.
 
-		#if "Reject her Offer"
+		#if "Reject her offer"
 ……えっ。=...Eh?
 関わり合いにならないでくれと言って、あなたは彼女を冷たく突き放した。=You acted cold-hearted and told her that you didn't want to get involved with her.
 ……そんな……嘘でしょ……？=...That...is a lie right...?\n
@@ -54,8 +54,8 @@
 不意に、夕がいるはずの場所に荒々しく車が立ち止まる音が聞こえてくる。=Unexpectedly, the sound of a braking car could be heard from the place where Yuu was supposed to be.
 
 		# Continuation
-どんな事情があるのかはわからないが、どうせくだらない人生だ。=I didn't know what kind of problems she was going through.
-少しでも良い思いが出来るならそれでいい。= But if a good for nothing like me could help her even just a little, it was fine.
+どんな事情があるのかはわからないが、どうせくだらない人生だ。=You didn't know what kind of problems she was going through.
+少しでも良い思いが出来るならそれでいい。= But if a good for nothing like you could help her even just a little, it was fine.
 半ば自棄になっていたあなたは、自宅のアパートへと彼女を招いた……。=You invited the girl who was desperate a moment ago inside your apartment...
 ……お邪魔します。=...Excuse me.
 あはは……本当に来ちゃった。=Ahaha...I'm really inside.
@@ -82,14 +82,14 @@
 元に戻しておこうと近付くと、表面に収められていた学生証が目に留まる。=While you were putting it back, you couldn't help but saw her Student ID that was showing on the cover.
 「芹沢 夕　○○女子学院高等部Ｘ年」="Serizawa Yuu ○○ Girl's High School X Year"
 ……検索して調べてみると、有名なお嬢様学校のようだ。=...If you remembered correctly, it was a famous All-Girls Highschool.
-強請たかりの類いにしては脇が甘く、援助交際をするような風にも見えない。=It might be tempting to exploit her vulnerability, however, I was not that kind of person.
-家庭に問題があるのか、面倒ごとに巻き込まれはしないか、=You wondered what could have happened at her home. And what if it could get you in trouble too?
+強請たかりの類いにしては脇が甘く、援助交際をするような風にも見えない。=It might be tempting to exploit her vulnerability, however, you were not that kind of person.
+家庭に問題があるのか、面倒ごとに巻き込まれはしないか、=You wondered what could have happened at her home. And what if it could get you in trouble, too?
 どうにでもなれとあなたは考えるのを止めて、ベッドの上に仰向けに倒れる。= You stopped thinking about it and fell down on your bed.
 色々と気になることはあるが、=There were just too many things to worry about.
 ……遠くから聞こえるシャワーの音が、耳に心地良い。=...The sound of the shower seemed far away, soothing to listen to.
 疲れ切っていたあなたの意識は、少しずつまどろみの中へと落ちていった……。=Your consciousness was fading due to the exhaustion and you began to slowly fall asleep...
 ……おじさん、本当に疲れてたんだね。=...Oji-san, you're really exhausted.
-よしよし……今日はもう、ゆっくり休んで良いんだからね。=It's ok it's ok...\nIt'll be fine, so take a good rest today.
+よしよし……今日はもう、ゆっくり休んで良いんだからね。=It's ok, it's ok...\nIt'll be fine, so take a good rest today.
 深夜。あなたは決まって、悪夢にうなされ目を覚ましていた。=Midnight. You woke up from a nightmare.
 仕事の重圧とストレスは絶えず心に付きまとい、眠っているときも心が安まることはない。=The pressure and stress from work were constantly on your mind, you couldn't even feel at ease when asleep.
 ……不意に石鹸の香りが鼻をかすめて、あなたは薄目を開く。=...Suddenly the scent of soap grazed your nose and you looked towards its direction.
@@ -121,8 +121,8 @@
 物音に目を覚ました夕に見送られながら、あなたは慌ただしく職場へと向かう。=After being sent off by Yuu, you headed towards your workplace.
 相変わらずの休日出勤だったが、よく眠れたおかげで体が軽い。=It was a regular day of office work, but thanks to being well rested your body felt light.
 ……手際よく仕事を片付けて、いつもよりだいぶ早く会社を出ることが出来た。=...After tidying up your work, you were able to go home earlier than usual.
-わかりやすいところに合い鍵と金を置いておいたが、夕はどうしているだろうか。=I put money and a duplicate key where it was easy to see. I wondered if Yuu was doing fine.
-一週間とは言っていたが、その理由もわからない。あっさりと姿を消していてもおかしくはない。=She said it'd be for a week, but I didn't know her reasons. It wouldn't be surprising if she suddenly disappeared.
+わかりやすいところに合い鍵と金を置いておいたが、夕はどうしているだろうか。=You put money and a duplicate key where it was easy to see. You wondered if Yuu was doing fine.
+一週間とは言っていたが、その理由もわからない。あっさりと姿を消していてもおかしくはない。=She said it'd be for a week, but you didn't know her reasons. It wouldn't be surprising if she suddenly disappeared.
 そんなことを考えている内に自宅まで戻ってくると、なんだか玄関の向こうから良い匂いが漂ってくる。=<size%3D28>You were wondering about such things while returning home, but somehow there was a pleasant aroma coming from the other side of the door.</size>
 おかえりなさい。=Welcome back.
 お疲れ様。休日なのに大変だったね。=Thanks for the hard work.\nEven though it was a day off.
