--- a/Translation/Game.txt
+++ b/Translation/Game.txt
@@ -337,6 +337,6 @@ Hmm……ふぅ。=Hmm...Fuu.
 どうにもならなければマネージャーに相談してやろう……そう考えられるだけで、以前よりだいぶ気は楽だった。=Let's consult with the manager...Maybe we would find ways to improve the workflow.
 夕に手伝ってもらったおかげで、今週は随分とスケジュールに余裕ができた。=Thanks to Yuu's help, your schedule was much more lax this week.
 これなら日曜は休んでも問題ないだろうと、あなたは部長に話を取り付ける。=If this kept up, you could take sundays off without any issues. You would like to talk with your manager about it later.
-……仕事を持ち帰ってやらないと休めないのはどうかと思うが、とにかく今は夕とのまとまった時間ができるのが嬉しかった。=...You wondered how you would be able to rest if you didn't take your work home. Regardless, you were happy to have more time with Yuu now.
+……仕事を持ち帰ってやらないと休めないのはどうかと思うが、とにかく今は夕とのまとまった時間ができるのが嬉しかった。=...You weren't sure if you would be able to rest properly without bringing work home. Regardless, you were happy to have more time with Yuu now.
 帰り道を歩きながら、あなたは休日の過ごし方を考える。=As you walked home, you thought about how to spend your day off.
 何しろしばらくぶりなので、何をすればいいのかわからない。夕と家でのんびりと過ごすか、あるいは彼女を誘って出かけてみようか……。=It's been a while, so I was not sure what to do. Relax at home with Yuu or invite her out...
